# FSA.IncidentsManagement/Models/StakeholderModel.cs
@@ -9,12 +9,12 @@ namespace FSA.IncidentsManagement.Models
     {
         public int Id { get; set; }
         public int IncidentId { get; set; }
-        public string FirstName { get; set; }
-        public string Surname { get; set; }
+        public string Name { get; set; }
         public string Role { get; set; }
         public string Phone { get; set; }
         public string Email { get; set; }
+        public string GovDept { get; set; }
         public int DiscriminatorId { get; set; }
-        public int AddressId { get; set; }
+        public int? AddressId { get; set; }
     }
 }
